--- a/section1/cmp-databinding-start/src/app/cockpit/cockpit.component.html
+++ b/section1/cmp-databinding-start/src/app/cockpit/cockpit.component.html
@@ -2,15 +2,21 @@
     <div class="col-xs-12">
       <p>Add new Servers or blueprints!</p>
       <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
+      <!-- Using two-way data binding: -->
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
+      <!-- Using local references: -->
+      <input type="text" class="form-control" #inputServerName>
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <!-- Using two-way data binding: -->
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
+      <!-- Using local references (passed through ViewChild): -->
+      <input type="text" class="form-control" #inputServerContent>
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServer(inputServerName)">Add Server</button>
       <button
         class="btn btn-primary"
-        (click)="onAddBlueprint()">Add Server Blueprint</button>
+        (click)="onAddBlueprint(inputServerName)">Add Server Blueprint</button>
     </div>
   </div>
