--- a/section1/cmp-databinding-assignment-start/src/app/game-control/game-control.component.html
+++ b/section1/cmp-databinding-assignment-start/src/app/game-control/game-control.component.html
@@ -1,3 +1,5 @@
-<p>
-  game-control works!
-</p>
+<div style="margin-top: 20px;">
+  <button id="startBtn" class="btn btn-success" (click)="onStartGame()">Start</button>
+  <button id="stopBtn" class="btn btn-danger" (click)="onStopGame()">Stop</button>
+</div>
+
