--- a/ng-recipe-book/src/app/app.component.html
+++ b/ng-recipe-book/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (selectedPage)="currentPage = $event"></app-header>
 <div class="container">
   <div class="row">
     <div class="col">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="currentPage === 'recipes'"></app-recipes>
+      <app-shopping-list *ngIf="currentPage === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
