--- a/ng-recipe-book/src/app/header/header.component.html
+++ b/ng-recipe-book/src/app/header/header.component.html
@@ -10,8 +10,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a href="#" class="nav-link">Recipes</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Shopping List</a></li>
+        <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('recipes')">Recipes</a></li>
+        <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="nav-item dropdown">
