--- a/ng-recipe-book/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/ng-recipe-book/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,15 +4,7 @@
 <hr>
 <div class="row">
   <div class="col">
-    <div class="mb-3" *ngFor="let recipe of recipes">
-      <div class="card" [ngStyle]="{'background-image': 'linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(' + recipe.imagePath + ')'}" >
-        <div class="card-description">
-          <h2>{{ recipe.name }}</h2>
-          <p>{{ recipe.description }}</p>
-        </div>
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
+    <app-recipe-item *ngFor="let recipeItem of recipes" [recipe]="recipeItem"></app-recipe-item>
   </div>
 </div>
 <!-- 'linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2))' -->
