--- a/ng-recipe-book/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/ng-recipe-book/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,7 +4,11 @@
 <hr>
 <div class="row">
   <div class="col">
-    <app-recipe-item *ngFor="let recipeItem of recipes" [recipe]="recipeItem"></app-recipe-item>
+    <app-recipe-item
+      *ngFor="let recipeItem of recipes"
+      [recipe]="recipeItem"
+      (selectedRecipe)="passSelectedRecipe(recipeItem)">
+    </app-recipe-item>
   </div>
 </div>
 <!-- 'linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2))' -->
