--- a/ng-recipe-book/src/app/recipes/recipes.component.html
+++ b/ng-recipe-book/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row my-3">
   <div class="col-md">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (passedSelectedRecipe)="recipe = $event"></app-recipe-list>
   </div>
   <div class="col-md">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="recipe; else infoText" [recipeDetail]="recipe"></app-recipe-detail>
+    <ng-template #infoText>
+      <p>Please select a recipe!</p>
+    </ng-template>
   </div>
 </div>
