--- a/ng-recipe-book/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/ng-recipe-book/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,16 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" placeholder="Banana">
+          <input type="text" id="name" class="form-control" placeholder="Banana" #nameInput>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" placeholder="10">
+          <input type="number" id="amount" class="form-control" placeholder="10" #amountInput>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <button type="submit" class="btn btn-success">Add</button>
+          <button type="submit" class="btn btn-success" (click)="onIngredientAdd()">Add</button>
           <button type="button" class="btn btn-danger">Delete</button>
           <button type="button" class="btn btn-primary">Clear</button>
         </div>
