--- a/ng-recipe-book/src/app/shopping-list/shopping-list.component.html
+++ b/ng-recipe-book/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit (addedIngredient)="addIngredientToList($event)"></app-shopping-edit>
     <hr>
     <ul class="list-group">
       <a class="list-group-item list-group-item-action" style="cursor: pointer;" *ngFor="let ingredient of ingredients" ><b>{{ ingredient.amount}}</b> {{ ingredient.name }}</a>
