--- a/ng-recipe-book/src/app/header/header.component.html
+++ b/ng-recipe-book/src/app/header/header.component.html
@@ -14,13 +14,13 @@
         <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li class="nav-item dropdown">
-        <a href="" class="nav-link dropdown-toggle" role="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li class="dropdown-item"><a href="#" class="nav-link">Save data</a></li>
-          <li class="dropdown-item"><a href="#" class="nav-link">Fetch data</a></li>
-        </ul>
-      </li>
+      <div class="nav-item dropdown" >
+        <a href="#" class="nav-link dropdown-toggle" role="button" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" appDropdown>Manage</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a href="#" class="dropdown-item">Save data</a>
+          <a href="#" class="dropdown-item">Fetch data</a>
+        </div>
+      </div>
     </ul>
   </div>
 </div>
