--- a/ng-recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/ng-recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -5,9 +5,16 @@
       <div class="card-body">
         <h4 class="card-title">{{ recipe.name }}</h4>
         <p class="card-text">{{ recipe.description }}.</p>
-        <a href="#" class="card-link btn btn-primary">Add to buy</a>
-        <a href="#" class="card-link">Edit</a>
-        <a href="#" class="card-link">Remove</a>
+        <div class="btn-group">
+          <button type="button" class="btn btn-primary">Add to Buy</button>
+          <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" appDropdown>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Edit recipe</a>
+            <a class="dropdown-item" href="#">Remove recipe</a>
+          </div>
+        </div>
         <h5 class="mt-3"> Ingredients</h5>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Cras justo odio</li>
@@ -18,3 +25,4 @@
     </div>
   </div>
 </div>
+
