added recipe and shopping-list services

--- a/ng-recipe-book/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/ng-recipe-book/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,8 +6,7 @@
   <div class="col">
     <app-recipe-item
       *ngFor="let recipeItem of recipes"
-      [recipe]="recipeItem"
-      (selectedRecipe)="passSelectedRecipe(recipeItem)">
+      [recipe]="recipeItem">
     </app-recipe-item>
   </div>
 </div>
