--- a/ng-recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/ng-recipe-book/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,10 +16,8 @@
           </div>
         </div>
         <h5 class="mt-3"> Ingredients</h5>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
+        <ul class="list-group list-group-flush" *ngFor="let ingredient of recipe.ingredients">
+          <li class="list-group-item">{{ ingredient.name }} ({{ ingredient.amount }})</li>
         </ul>
       </div>
     </div>
